--- a/styles.css
+++ b/styles.css
@@ -15,13 +15,14 @@
     background-color: darkgrey;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .screen-container {
     background-color: aliceblue;
     width: 560px;
     height: 100px;
+    margin-left: 20px;
     margin-top: 20px;
     margin-bottom: 10px;
     display: flex;
@@ -40,6 +41,7 @@
     width: 600px;
     height: 100px;
     display: flex;
+    margin-top: 10px;
     align-items: center;
     justify-content: center;
 }
@@ -54,8 +56,46 @@
     text-align: center;
 }
 
-.number-container {
-    width: 600px;
-    height: 100px;
+.button-container {
     display: flex;
+    flex-direction: row;
+}
+
+.number-container {
+    width: 430px;
+    height: auto;
+    margin-top: 10px;
+    margin-left: 20px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: flex-start;
+}
+
+.number-container div {
+    flex: 1 0 3;
+    height: 100px;
+    width: 130px;
+    background-color: grey;
+    margin-bottom: 20px;
+    margin-right: 10px;
+}
+
+.operator-container {
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+    flex: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.operator-container div {
+    
+    text-align: center;
+    height: 100px;
+    width: 130px;
+    background-color: grey;
+    margin-bottom: 20px;
+    margin-right: 10px;
 }
