--- a/styles.css
+++ b/styles.css
@@ -1,101 +1,74 @@
-* {
+*, ::before, ::after {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-}
-
-.flex-container {
-    display: flex;
-    justify-content:  center;
-}
-
-.calc-shell {
-    width: 600px;
-    height: auto;
-    margin-top: 50px;
-    background-color: darkgrey;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-}
-
-.screen-container {
-    background-color: aliceblue;
-    width: 560px;
-    height: 100px;
-    margin-left: 20px;
-    margin-top: 20px;
-    margin-bottom: 10px;
-    display: flex;
-    justify-content: flex-end;
-}
-
-.screen-value {
-    font-family: monospace;
-    color: greenyellow;
-    font-size: 80px;
-    font-weight: 500;
-    padding-right: 10px;
-}
-
-.clear-container {
-    width: 600px;
-    height: 100px;
-    display: flex;
-    margin-top: 10px;
-    align-items: center;
-    justify-content: center;
-}
-
-.clear-container div {
-    flex: 1;
-    font-family: monospace;
-    font-size: 60px;
-    margin-top: 10px;
-    margin: 20px;
-    background-color: grey;
-    text-align: center;
-}
-
-.button-container {
-    display: flex;
-    flex-direction: row;
-}
-
-.number-container {
-    width: 430px;
-    height: auto;
-    margin-top: 10px;
-    margin-left: 20px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: flex-start;
-}
-
-.number-container div {
-    flex: 1 0 3;
-    height: 100px;
-    width: 130px;
-    background-color: grey;
-    margin-bottom: 20px;
-    margin-right: 10px;
-}
-
-.operator-container {
-    margin-top: 10px;
-    display: flex;
-    flex-direction: column;
-    flex: wrap;
-    justify-content: center;
-    align-items: center;
-}
-
-.operator-container div {
+    font-family: monospace, sans-serif;
+    font-weight: normal;
     
-    text-align: center;
-    height: 100px;
-    width: 130px;
-    background-color: grey;
-    margin-bottom: 20px;
-    margin-right: 10px;
+}
+
+body {
+    background-color: darkslategrey;
+}
+
+.calc-grid {
+    display: grid;
+    justify-content: center;
+    align-content: center;
+    grid-template-columns: 4;
+    grid-template-rows: 5;
+    min-height: 100vh;
+    grid-template-columns: repeat(4,100px);
+    grid-template-rows: minmax(120px, auto) repeat(5, 100px);
+}
+
+.calc-grid > button {
+    cursor: pointer;
+    font-size: 2rem;
+    border: 1px solid white;
+    outline: none;
+    background-color: darkcyan;
+
+}
+
+.calc-grid > button:hover {
+    
+    background-color:aqua;
+    
+}
+
+.span-two {
+    grid-column: span 2;
+}
+
+.output {
+    grid-column: 1 / -1;
+    background-color: black;
+    display: flex;
+    padding: 10px;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: space-around;
+    word-wrap: break-word;
+    word-break: break-all;
+}
+
+.output .previous-operand{
+    color: antiquewhite;
+    font-size: 1.5rem;
+}
+
+.output .current-operand {
+    color: white;
+    font-size: 1.5rem;
+}
+
+.output .operator {
+    color: white;
+    font-size: 1.5rem;
+}
+
+.output .result-operand {
+    color: white;
+    font-size: 3rem;
 }
